fix blog and learn margin alignment

--- a/src/pages/learn.module.css
+++ b/src/pages/learn.module.css
@@ -1,3 +1,7 @@
+.container {
+  padding: 0 0.7rem;
+}
+
 .ulContainers {
   list-style-type: none;
 }
