--- a/src/templates/blogPost.module.css
+++ b/src/templates/blogPost.module.css
@@ -1,3 +1,7 @@
+.container {
+  padding: 0 0.7rem;
+}
+
 .blogpost {
   margin-bottom: 2rem;
 }
